remove navbar x-overflow to avoid FOUC

--- a/public/modules/_layout/assets/scss/_navbar.scss
+++ b/public/modules/_layout/assets/scss/_navbar.scss
@@ -1,7 +1,7 @@
 
 pw-navbar {
-	
-	nav {
+
+	.navbar-collapse {
 		overflow-x: hidden !important;
 	}
 	
